# RESUME-REVIEWER

./: README.md  pyproject.toml
src/resume_reviewer/: models.py  rendering.py  web.py  wsgi.py
tests/: test_analyzer.py
